[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InfoBackground" type="ColorRect" parent="."]
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[node name="CharacterInfo" type="Label" parent="."]
margin_left = 24.0
margin_top = 536.0
margin_right = 1000.0
margin_bottom = 584.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "loran ipzum"

[node name="NextPartnerLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 592.0
margin_right = 196.0
margin_bottom = 628.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Next partner:"

[node name="PartnerCount" type="Label" parent="."]
margin_left = 832.0
margin_top = 592.0
margin_right = 1004.0
margin_bottom = 628.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "X partners"
